# netxms

./: .clang-format  .clangd  .cvsignore  .drone.yml  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS  BUILD_WINDOWS.md  CLAUDE.md  CONTRIBUTING.md  COPYING  ChangeLog  DESIGN.md  Doxyfile  INSTALL  Makefile.am  Makefile.inc.w32  Makefile.nw  Makefile.w32  NEWS  README  README.HPUX  README.NetWare  README.in  README.md  THANKS  TODO  UPGRADE  acinclude.m4  build_windows.cmd  clean  compile_commands.json  config.mingw  config.mingw.template  config.mingw.xp  configure.ac  git-commit.bat  init-source-tree  (+12 more)
contrib/mibs/: A3COM-HUAWEI-COMMON-MIB.txt  A3COM-HUAWEI-CONFIG-MAN-MIB.txt  A3COM-HUAWEI-ENTITY-EXT-MIB.txt  A3COM-HUAWEI-ENTITY-VENDORTYPE-OID-MIB.mib  A3COM-HUAWEI-IF-EXT-MIB.txt  A3COM-HUAWEI-IP-ADDRESS-MIB.mib  A3COM-HUAWEI-IP-MIB.txt  A3COM-HUAWEI-IPV6-ADDRESS-MIB.txt  A3COM-HUAWEI-OBJECT-INFO-MIB.mib  A3COM-HUAWEI-SSH-MIB.mib  A3COM-HUAWEI-STACK-MIB.txt  A3COM-HUAWEI-SYS-MAN-MIB.mib  A3COM-HUAWEI-SYSLOG-MIB.mib  A3COM-HUAWEI-TRAP-MIB.txt  A3Com-products-MIB.mib  AAC-MIB.txt  ACLMGMT-MIB.mib  AGENT-GENERAL-MIB.mib  AI-AP-MIB.mib  AIRESPACE-SWITCHING-MIB.mib  AIRESPACE-WIRELESS-MIB.txt  APACHE2-MIB.mib  APPLICATION-MIB.txt  ARCADA-MIB.mib  ARCADA-MIB.txt  ARP-Spoofing-Prevent-MIB.mib  ARUBA-MGMT-MIB.txt  ARUBA-MIB.txt  ARUBA-TC.mib  ASTARO-MIB.mib  ATM-TC-MIB.txt  AUTH-MIB.txt  AtiL2-MIB.mib  BAY-STACK-ADAC-MIB.mib  BAY-STACK-ERROR-MESSAGE-MIB.txt  BAY-STACK-MIB.mib  BAY-STACK-MIB.txt  BAY-STACK-MULTICAST-FLOODING-MIB.mib  BAY-STACK-NOTIFICATIONS-MIB.txt  BAY-STACK-OSPF-EXT-MIB.mib  (+763 more)
contrib/music/: Makefile.am
contrib/oui/: .~lock.oui.csv#  Makefile.am  oui.csv  oui28.csv  oui36.csv
contrib/templates/: Makefile.am  aix.xml  apc.xml  brocade_icx.xml  cisco_gsm.xml  cisco_performance.json  cyberpower.xml  dell_hw.xml  dell_idrac.xml  eaton_ups.xml  epp_terminate_thread_alarms.xml  generic_unix.xml  hp_ilo.xml  hpux.xml  intel_baseboard.xml  interface_traffic.xml  lenovo_xcc.xml  linux.xml  lsi_megaraid.xml  mikrotik-authentication-failures-syslog.json  mssql.json  mssql_perf_counters_default_instance.json  netgear_nas.xml  netxms_agent.xml  netxms_file_handle_usage.xml  netxms_server.xml  netxms_server_certificate.xml  nvme_ssd.json  object_tools.xml  oracle.json  oracle_server.json  pgsql.json  pgsql_server.json  printers.xml  qnap.xml  rapl_energy_consumption.xml  ruckus_zonedirector.xml  sata_ssd.json  sonicwall.xml  sophos.xml  (+10 more)
doc/internal/: ComponentDiscovery - Draft.odt  Makefile.am  NetworkDeviceDrivers.docx  build.w64  coding_style.txt  dashboard_element_config.txt  db_datatypes.txt  db_driver_api.txt  db_format_change.txt  dci_perftab.txt  debug_tags.txt  event_code_ranges.txt  ipso.txt  layer2-topology.txt  licensing_problems.txt  netxms_architecture.gxml  netxms_architecture.vsd  nxcp_command_ranges.txt  nxinstall.txt  release_procedure.txt  report_definition.docx  sleak howto.txt  sleak_debug.options  snmp.txt  tables_with_object_id.txt  unicode.txt
images/: 1ddb76a3-a05f-4a42-acda-22021768feaf  Makefile.am  b314cf44-b2aa-478e-b23a-73bc5bb9a624  ba6ab507-f62d-4b8f-824c-ca9d46f22375  bacde727-b183-4e6c-8dca-ab024c88b999  f9105c54-8dcf-483a-b387-b4587dfd3cba
include/: FlexLexer.h  Makefile.am  appagent.h  ata.h  base32.h  base64.h  build.h  config-netware.h  dbdrv.h  doxygen.h  ethernet_ip.h  gauge_helpers.h  geolocation.h  getopt.h  ieee8021x.h  interface_types.h  jansson.h  jansson_config.h  ncdrv.h  netxms-regex.h  netxms-version.h  netxms-xml.h  netxms_getopt.h  netxms_isc.h  netxms_maps.h  netxmsdb.h  nms_agent.h  nms_common.h  nms_cscp.h  nms_threads.h  nms_util.h  nx_shared_ptr.h  nxappc_internal.h  nxatomic.h  nxcall.h  nxcc.h  nxclapi.h  nxcldefs.h  nxclient.h  nxclobj.h  (+48 more)
include/argon2/: Makefile.am
include/jansson/: Makefile.am
include/mingw/: win_missing_defs.h  win_xp_compat.h  winres.h
include/msvc/: Makefile.am
m4/: Makefile.am
manpages/: Makefile.am  netxmsd.8  netxmsd.conf.5  nxagentd.conf.5  nxdbmgr.8  update.sh
sql/: .cvsignore  Makefile  Makefile.am  Makefile.msvc.w32  Makefile.w32  additional_comments.in  categories.in  change-ansi-event_log.sql  clear.sql  country_codes.in  currency_codes.in  database.in  dbinit.in  devdb.in  drop.sh  events.in  events.sql  functions.in  images.in  maps.in  metadata.in  objtools.in  policy.in  schema.in  schema.sql  scripts.in  setup.in  setup.sql  strip.pl  traps.in
sql/upgrade/: 00100011.nxdb  00110012.nxdb  00120013.nxdb  Makefile.am  common.nxdb
src/jansson/: Makefile.am  Makefile.w32  dump.c  hashtable.c  hashtable.h  hashtable_seed.c  jansson.vcproj  jansson.vcxproj  jansson.vcxproj.filters  jansson_private.h  jansson_private_config.h  load.c  lookup3.h  memory.c  pack_unpack.c  strbuffer.c  utf.c  utf.h  value.c
src/libargon2/: Makefile.am  Makefile.w32  libargon2.vcxproj  libargon2.vcxproj.filters
src/libnetxms/: .cproject  .project  CLAUDE.md  Makefile  Makefile.am  Makefile.nw  Makefile.w32  StackWalker.cpp  StackWalker.h  agent.cpp  array.cpp  base32.cpp  base64.cpp  bytestream.cpp  c_lgcc2.cpp  c_lgcc3.cpp  calltbl.cpp  cc_mb.cpp  cc_ucs2.cpp  cc_ucs4.cpp  cc_utf8.cpp  cch.cpp  cert.cpp  config.cpp  crashdump.cpp  crypto.cpp  cscp.cpp  curl.cpp  debug_tag_tree.cpp  debug_tag_tree.h  des.cpp  diff.cpp  diff.h  dir.c  dir.cpp  dirw.c  (+120 more)
tools/: Makefile.am  add_vcxproj_include_dir.py  analyze_threads.pl  capture_netxmsd_threads.sh  capture_nxagentd_threads.sh  chkmsgs.sh  collect-server-diagnostic.sh  create_apkg.sh  create_bin_apkg.sh  create_jar_list.pl  create_ssa_list.sh  create_table_list.pl  fixprop.c  fixprop.sh  flex_bison.props  flex_bison.rule  flex_bison.targets  flex_bison.xml  gen_param_doc.pl  generate_guids.pl  header2java.py  mc.pl  mc.props  mc.rule  mc.targets  mc.xml  moveEclipseTranslationsMessages.py  nwmkimp.pl  pack_nls_files.cmd  pack_nls_files.sh  patch_config.status.pl  patch_libtool.pl  regen_images_in.py  regen_stock_images.py  replace_in_vcxproj.py  sharIt  split_mibs.pl  stub.sh  switch_to_version.sh  sync_message_files.py  (+5 more)
(+14855 files in other folders)
